Add permissions for workflow updates

--- a/.github/workflows/sync-upstream-pr-on-conflict.yml
+++ b/.github/workflows/sync-upstream-pr-on-conflict.yml
@@ -12,6 +12,7 @@ on:
 permissions:
   contents: write         # push branches / read content
   pull-requests: write    # create PRs
+  workflows: write        # update workflows
 
 env:
   UPSTREAM_REPO: "stephengpope/no-code-architects-toolkit"  # change this to the upstream repo (owner/repo)
